--- a/configuration.yaml
+++ b/configuration.yaml
@@ -92,7 +92,7 @@ recorder:
       - sensor.power_prise_garage
       - sensor.speedtest_download
       - sensor.speedtest_upload
-      - sensor.fastcom_download
+      - sensor.fast_com_download
       - sensor.month_car_charge
       - sensor.day_car_charge
       - sensor.processor_use
