chore(camera): change color when camera on

--- a/input_boolean.yaml
+++ b/input_boolean.yaml
@@ -26,4 +26,9 @@ notifications:
   initial: on
 camera_sejour_state:
   name: Caméra sejour
-  icon: mdi:mdi:cctv
+  icon: mdi:cctv
+  templates:
+    icon_color: >
+      if (state === 'on') return '#fdd835';
+      return '#44739e';
+    
