Revert "chore(camera): change color when camera on"
This reverts commit 17ccc5274ea60073ed5f21e6dc253a60c5f19871.

--- a/input_boolean.yaml
+++ b/input_boolean.yaml
@@ -26,9 +26,4 @@ notifications:
   initial: on
 camera_sejour_state:
   name: Caméra sejour
-  icon: mdi:cctv
-  templates:
-    icon_color: >
-      if (state === 'on') return '#fdd835';
-      return '#44739e';
-    
+  icon: mdi:mdi:cctv
