--- a/automations.yaml
+++ b/automations.yaml
@@ -4,7 +4,17 @@
   - event: sunset
     platform: sun  
   action:
+    - delay: 00:19
     - service: script.fermeture_volets_nuit
+
+- id: closing_covers_delay_answer
+  trigger:
+    - platform: webhook
+      webhook_id: haslack
+  action:
+    - service: input_number.set_value
+      entity: input_number.closing_covers_delay
+      value: {{trigger.json.actions[0].value}}
 
 - id: veilleuse
   alias: Veilleuse
