--- a/input_number.yaml
+++ b/input_number.yaml
@@ -82,3 +82,10 @@ low_alert_temperature:
   initial: 17
   min: 10
   max: 19
+
+closing_covers_delay:
+  name: délai fermeture volets
+  initial: 0
+  unit_of_measurement: 'mn'
+  min: 0
+  max: 60
