--- a/automations.yaml
+++ b/automations.yaml
@@ -14,7 +14,7 @@
   action:
     - service: input_number.set_value
       data_template:
-        entity: input_number.closing_covers_delay
+        entity_id: input_number.closing_covers_delay
         value: "{{ trigger.json.actions[0].value }}"
 
 - id: veilleuse
