--- a/automations.yaml
+++ b/automations.yaml
@@ -15,7 +15,7 @@
     - service: input_number.set_value
       data_template:
         entity_id: input_number.closing_covers_delay
-        value: "{{ trigger.json.actions[0].value }}"
+        value: "{{ (trigger.data.payload|value_json).actions[0].value }}"
 
 - id: veilleuse
   alias: Veilleuse
