--- a/automations.yaml
+++ b/automations.yaml
@@ -12,10 +12,10 @@
     - platform: webhook
       webhook_id: haslack
   action:
-    - service: input_number.set_value
+    - service: input_text.set_value
       data_template:
-        entity_id: input_number.closing_covers_delay
-        value: "{{ (trigger.data.payload|value_json).actions[0].value }}"
+        entity_id: input_text.temp_text
+        value_template: "{{ trigger.data.payload  }}"
 
 - id: veilleuse
   alias: Veilleuse
