--- a/automations.yaml
+++ b/automations.yaml
@@ -8,14 +8,15 @@
     - service: script.fermeture_volets_nuit
 
 - id: closing_covers_delay_answer
+  alias: Ajout délai fermeture volets
   trigger:
     - platform: webhook
       webhook_id: haslack
   action:
-    - service: input_text.set_value
+    - service: input_number.set_value
       data_template:
-        entity_id: input_text.temp_text
-        value_template: "{{ trigger.data.payload  }}"
+        entity_id: input_number.closing_covers_delay
+        value_template: "{{ trigger.query.delay }}"
 
 - id: veilleuse
   alias: Veilleuse
