--- a/automations.yaml
+++ b/automations.yaml
@@ -16,8 +16,8 @@
     - service: input_number.set_value
       data_template:
         entity_id: input_number.closing_covers_delay
-        value_template: "{{ trigger.data.payload | regex_findall_index('\"value\": (.*),', 0) }}"
-
+        value: "{{ trigger.data.payload | regex_findall_index('\"value\":\"(.*?)\"', 0) | float }}"
+      
 - id: veilleuse
   alias: Veilleuse
   trigger:
