--- a/automations.yaml
+++ b/automations.yaml
@@ -13,13 +13,16 @@
     - platform: webhook
       webhook_id: haslack
   action:
+    - service: system_log.write
+      data_template:
+        message: "{{ trigger.data.payload }}"
     - service: input_number.set_value
       data_template:
         entity_id: input_number.closing_covers_delay
         value: "{{ trigger.data.payload | regex_findall_index('\"value\":\"(.*?)\"', 0) | float }}"
     - service: rest_command.callback
       data_template:
-        callback_url: "{{ trigger.data.payload | regex_findall_index('\"response_url\":\"(.*?)\"', 0) }}"
+        callback_url: "{{ trigger.data.payload | regex_findall_index('\"response_url\":\"(.*?)\"', 0) | regex_replace('%5C') | | regex_replace('/{3}','') }}"
 
 - id: veilleuse
   alias: Veilleuse
