--- a/automations.yaml
+++ b/automations.yaml
@@ -5,7 +5,7 @@
     platform: sun  
   action:
     - delay: 00:19
-    - service: script.fermeture_volets_nuit
+    - service: script.sunset_closing_covers
 
 - id: closing_covers_delay_answer
   alias: Ajout délai fermeture volets
@@ -13,16 +13,27 @@
     - platform: webhook
       webhook_id: haslack
   action:
+    # Log the slack action
     - service: system_log.write
       data_template:
         message: "{{ trigger.data.payload }}"
+    # Set the value 
     - service: input_number.set_value
       data_template:
         entity_id: input_number.closing_covers_delay
         value: "{{ trigger.data.payload | regex_findall_index('\"value\":\"(.*?)\"', 0) | float }}"
-    - service: rest_command.callback
+    # Answer the slack action
+    - service: script.callback_covers_notification
       data_template:
         callback_url: "{{ trigger.data.payload | regex_findall_index('\"response_url\":\"(.*?)\"', 0) | regex_replace('%5C') | regex_replace('/{3}','') }}"
+        message: >
+          {% if states.input_number.closing_covers_delay.state > 0 %}
+            Ok ! Je repousse de {{states.input_number.closing_covers_delay.state}} min.
+          {% elif is_state('input_number.closing_covers_delay', 0) %}
+            Ok ! On se laisse faire :)
+          {% else %}
+            On laisse ouvert ! :)
+          {% endif %}
 
 - id: veilleuse
   alias: Veilleuse
