--- a/scripts.yaml
+++ b/scripts.yaml
@@ -34,8 +34,9 @@ sunset_closing_covers:
     - service: script.fermeture_volets
     # Reset the value at end
     - service: input_number.set_value
-      entity_id: input_number.closing_covers_delay
-      value: 0
+      data:
+        entity_id: input_number.closing_covers_delay
+        value: 0
 
 
 eteindre_prise_garage:
