--- a/scripts.yaml
+++ b/scripts.yaml
@@ -26,7 +26,7 @@ sunset_closing_covers:
     - condition: state
       entity_id: input_boolean.cover_mode
       state: 'on'
-    - service: script.notify
+    - service: script.notify_closing_covers
       data_template:
         message: "Les volets vont se fermer" 
     - delay: 00:01:00 #1 minute to answer
