test callback slack

--- a/automations.yaml
+++ b/automations.yaml
@@ -17,6 +17,9 @@
     - service: system_log.write
       data_template:
         message: "{{ trigger.data.payload }}"
+    - service: system_log.write
+      data_template:
+        message: "{{ trigger.data.payload | regex_findall_index('\"response_url\":\"(.*?)\"', 0) | regex_replace('%5C') | regex_replace('/{3}','') | replace('\\/', '/') }}"
     # Set the value 
     - service: input_number.set_value
       data_template:
@@ -25,7 +28,7 @@
     # Answer the slack action
     - service: script.callback_covers_notification
       data_template:
-        callback_url: "{{ trigger.data.payload | regex_findall_index('\"response_url\":\"(.*?)\"', 0) | regex_replace('%5C') | regex_replace('/{3}','') | regex_replace('\\\\')  }}"
+        callback_url: "{{ trigger.data.payload | regex_findall_index('\"response_url\":\"(.*?)\"', 0) | regex_replace('%5C') | regex_replace('/{3}','') | replace('\\/', '/')  }}"
         message: >
           {% if (states.input_number.closing_covers_delay.state)|int > 0 %}
             Ok ! Je repousse de {{states.input_number.closing_covers_delay.state}} min.
