--- a/automations.yaml
+++ b/automations.yaml
@@ -448,3 +448,61 @@
     value_template: "{{ (states.sensor.fibaro_system_fgms001_motion_sensor_temperature.state|float) >= (states.input_number.high_alert_temperature.state|float) }}"
   action:
     - service: script.notify_high_temperature
+
+- id: notify_package_in_transit
+  alias: Notifier colis en cours
+  trigger:
+    platform: state
+    entity_id: sensor.seventeentrack_packages_in_transit
+  condition:
+    - condition: template
+      value_template: '{{trigger.to_state.state > 0 and trigger.to_state.state > trigger.from_state.state }}'
+  action:
+    - service: script.notify
+      data_template:
+        criticity: success
+        message: "Un nouveau colis est en chemin !"
+
+- id: notify_package_delivered
+  alias: Notifier colis livre
+  trigger:
+    platform: state
+    entity_id: sensor.seventeentrack_packages_delivered
+  condition:
+    - condition: template
+      value_template: '{{trigger.to_state.state > 0 and trigger.to_state.state > trigger.from_state.state }}'
+  action:
+    - service: script.notify
+      data_template:
+        criticity: success
+        message: "Un colis vient d'être livré !"
+
+
+- id: notify_package_undelivered
+  alias: Notifier colis livre
+  trigger:
+    platform: state
+    entity_id: sensor.seventeentrack_packages_undelivered
+  condition:
+    - condition: template
+      value_template: '{{trigger.to_state.state > 0 and trigger.to_state.state > trigger.from_state.state }}'
+  action:
+    - service: script.notify
+      data_template:
+        criticity: warning
+        message: "Un colis n'a pas été remis..."
+
+- id: notify_package_readytobepickedup
+  alias: Notifier colis livré en relais
+  trigger:
+    platform: state
+    entity_id: sensor.seventeentrack_packages_ready_to_be_picked_up
+  condition:
+    - condition: template
+      value_template: '{{trigger.to_state.state > 0 and trigger.to_state.state > trigger.from_state.state }}'
+  action:
+    - service: script.notify
+      data_template:
+        criticity: success
+        message: "Un colis est en attente de retrait !"
+
