--- a/configuration.yaml
+++ b/configuration.yaml
@@ -147,7 +147,7 @@ switch:
 cast:
   media_player:
     - host: 192.168.0.40
-    # - host: 192.168.0.41
+    - host: 192.168.0.41
 
 # Text to speech
 tts:
