--- a/configuration.yaml
+++ b/configuration.yaml
@@ -249,7 +249,8 @@ script: !include scripts.yaml
 zone: !include zones.yaml
 notify: !include notify.yaml
 
-# logger:
+logger:
+  default: warning
 #   logs:
 #     homeassistant.components.media_player: fatal
 
