--- a/scripts.yaml
+++ b/scripts.yaml
@@ -131,7 +131,7 @@ notify:
   sequence: 
     service: notify.slack
     data_template:
-      # message: ""
+      message: ""
       target: 
         - "{{target|default('#domotique')}}"
       data:
