--- a/configuration.yaml
+++ b/configuration.yaml
@@ -17,7 +17,7 @@ homeassistant:
 
 # Enables the frontend
 frontend:
-  themes: !include_dir_merge_named ../themes.yaml
+  themes: !include_dir_merge_named ../themes
 
 #Enable REST API
 api:
