--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -4,7 +4,7 @@ views:
     icon: mdi:home-assistant
     cards: !include lovelace/ui-home.yaml
     path: home
-    # panel: true
+    panel: true
 
   - title: Volets
     icon: mdi:garage
