--- a/lovelace/ui-home.yaml
+++ b/lovelace/ui-home.yaml
@@ -38,10 +38,10 @@
       cards:
         - type: button
           icon: mdi:window-shutter
-          entity: script.fermeture_volets
+          tap_action: script.fermeture_volets
         - type: button
           icon: mdi:window-shutter-open
-          entity: script.ouverture_volets
+          tap_action: script.ouverture_volets
 
     - title: Lumières
       type: entities
