--- a/lovelace/ui-monitoring.yaml
+++ b/lovelace/ui-monitoring.yaml
@@ -59,15 +59,15 @@
             - sensor.memory_use_percent
     
 - type: horizontal-stack
+  name: Batteries
   cards:
-    - title: Batteries
-      type: entities
+    - type: entities
       entities:
         - entity: sensor.fibaro_system_fgms001_motion_sensor_battery_level
           name: Motion sensor
         - entity: sensor.fibaro_system_fgsd002_smoke_sensor_battery_level
           name: Smoke sensor étage
-        - entity: sensor.fibaro_system_fgms001_motion_sensor_battery_level_2
+        - entity: sensor.fibaro_system_fgsd002_smoke_sensor_battery_level_2
           name: Smoke sensor RDC
         - entity: sensor.hank_hkzw_scn04_scene_controller_battery_level
           name: Télécommande
