--- a/scripts.yaml
+++ b/scripts.yaml
@@ -134,21 +134,21 @@ notify:
       message: ""
       target: 
         - "{{target|default('#domotique')}}"
-      data:
-        attachments:
-          - title: "{{title|default('')}}"
-            text: "{{message}}"
-            color: "{{criticity|default('#03a9f4')}}"
       # data:
-      #   blocks:
-      #     - type: section
-      #       text: 
-      #         type: "{{ 'mrkdwn' if ((title | length) > 0) else 'plain_text' }}"
-      #         text: "{{ ('*' + title + '*') if ((title | length) > 0) else message }}"
-      #     - type: section
-      #       text:
-      #         type: plain_text
-      #         text: "{{ message if ((title | length) > 0) else '---' }}"
+      #   attachments:
+      #     - title: "{{title|default('')}}"
+      #       text: "{{message}}"
+      #       color: "{{criticity|default('#03a9f4')}}"
+      data:
+        blocks:
+          - type: section
+            text: 
+              type: "{{ 'mrkdwn' if ((title | length) > 0) else 'plain_text' }}"
+              text: "{{ ('*' + title + '*') if ((title | length) > 0) else message }}"
+          - type: section
+            text:
+              type: plain_text
+              text: "{{ message if ((title | length) > 0) else '---' }}"
 
 notify_action:
   alias: Slack notificator with actions
