--- a/configuration.yaml
+++ b/configuration.yaml
@@ -139,10 +139,10 @@ sun:
 
 switch:
   - platform: broadlink
-    host: 192.168.0.25
     mac: '34:EA:34:9D:27:5C'
-    type: SP3S-EU
-    friendly_name: Prise garage
+    switches:
+      - name: Prise garage
+      
 
 cast:
   media_player:
